# rscontacts

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
docs/: book.toml
docs/src/: SUMMARY.md  authentication.md  commands.md  configuration.md  design-decisions.md  future-ideas.md  getting-started.md  installation.md  introduction.md  phone-sync-issues.md  same-name-issue.md  transport-errors.md
docs/src/commands/: all-checks.md  auth.md  check-all.md  check-contact-company-exists.md  check-contact-company-known.md  check-contact-displayname-duplicate.md  check-contact-email-duplicate.md  check-contact-email.md  check-contact-family-name-regexp.md  check-contact-given-name-exists.md  check-contact-given-name-known.md  check-contact-given-name-regexp.md  check-contact-label-nophone.md  check-contact-label-regexp.md  check-contact-label-space.md  check-contact-no-displayname.md  check-contact-no-given-name.md  check-contact-no-identity.md  check-contact-no-label.md  check-contact-no-middle-name.md  check-contact-no-nickname.md  check-contact-suffix-regexp.md  check-contact-type-company-given-name.md  check-contact-type-company-no-company.md  check-contact-type-company-no-label.md  check-contact-type.md  check-duplicate-emails.md  check-duplicate-phones.md  check-email-caps.md  check-email.md  check-labels-nophone.md  check-name-caps.md  check-name-english.md  check-name-first-capital-letter.md  check-name-order.md  check-phone-country-label.md  check-phone-countrycode.md  check-phone-duplicate.md  check-phone-format.md  check-phone-label-english.md  (+22 more)
examples/: test_connect.rs
src/: commands.rs  helpers.rs  lib.rs  main.rs
tests/: cli_tests.rs  helpers_tests.rs
