[package]
name = "rscontacts"
version = "0.1.0"
edition = "2024"

[dependencies]
google-people1 = "6"
yup-oauth2 = "11"
hyper = "1"
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["client-legacy", "http2"] }
http = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
open = "5"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
