[package]
name = "rscontacts"
version = "0.1.4"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]

[dependencies]
google-people1 = "6"
yup-oauth2 = "11"
hyper = "1"
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["client-legacy", "http2"] }
http = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
regex = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6"
open = "5"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustyline = { version = "15", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
